--- a/CpmPedidos.Repositorie/CpmPedidos.Repositorie.csproj
+++ b/CpmPedidos.Repositorie/CpmPedidos.Repositorie.csproj
@@ -5,11 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Common\" />
+    <Folder Include="Maps\" />
     <Folder Include="Repositories\" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CpmPedidos.Domain\CpmPedidos.Domain.csproj" />
+    <ProjectReference Include="..\CpmPedidos.Interface\CpmPedidos.Interface.csproj" />
   </ItemGroup>
 
 </Project>
