--- a/CpmPedidos.Domain/CpmPedidos.Domain.csproj
+++ b/CpmPedidos.Domain/CpmPedidos.Domain.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -6,6 +6,9 @@
 
   <ItemGroup>
     <Folder Include="Dtos\" />
+    <Folder Include="Entities\" />
+    <Folder Include="Enums\" />
+    <Folder Include="Interfaces\" />
   </ItemGroup>
 
 </Project>
